align text fix

--- a/src/component/Homepage/chooseus.css
+++ b/src/component/Homepage/chooseus.css
@@ -636,7 +636,7 @@ margin-top: 50px;
 }
 @media (max-width:600px){
     .choose-body-box{
-       gap: 20px;
+       gap: 25px;
     }
 }
 
