--- a/src/component/Homepage/header.css
+++ b/src/component/Homepage/header.css
@@ -200,7 +200,6 @@
 
 .navbar.scrolled {
     margin-top: -40px;
-    /* background-color: rgba(0, 0, 0, 0.8); */
     background: rgb(2,0,36);
 background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(108,45,45,1) 65%, rgba(181,42,47,0.8) 100%);
     height: 80px;
@@ -258,35 +257,6 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(108,45,45,1) 65%, rgb
         display: none;
     }
 }
-
-/* .navmenu ul li {
-    position: relative;
-    cursor: pointer;
-    
-    
-}
-
-.navmenu ul li:hover {
-    color: red;
-}
-
-
-.navmenu ul li::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: -5px;
-    width: 0;
-    height: 3px;
-    background-color: red;
-    transition: width 0.3s ease-in-out;
-}
-
-
-.navmenu ul li:hover::after {
-    width: 100%;
-} */
-
 
 
 
@@ -983,6 +953,10 @@ z-index: 5;
   
     transform: scale(1.05); /* Slightly enlarges the button */
     box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+}
+
+.offcanvas-navmenu button{
+    background-color: transparent !important;
 }
 
 .banner-slider2 {
