--- a/src/component/Homepage/testimonials.css
+++ b/src/component/Homepage/testimonials.css
@@ -172,7 +172,6 @@ height: 500px;
 
 
 
-
 @media (min-width:1500px){
     
     .testimonials-content-heading-picture{
@@ -205,7 +204,7 @@ height: 500px;
     
     .testimonials-content-heading-picture{
         display: visible;
-        margin-left: 125px;
+        margin-left: 115px;
         height: 300px;
     width: 450px;  
     }
@@ -233,7 +232,21 @@ height: 500px;
     
     .testimonials-content-heading-picture{
         display: visible;
-        margin-left: 160px;
+        margin-left: 150px;
+        height: 200px;
+        width: 350px;  
+    }
+
+    .testimonials-content-heading-picture img{
+        display: visible;
+        width: 100%;
+    }
+}
+@media (max-width:500px){
+    
+    .testimonials-content-heading-picture{
+        display: visible;
+        margin-left: 143px;
         height: 200px;
         width: 350px;  
     }
@@ -247,7 +260,7 @@ height: 500px;
 @media (max-width:420px){
     
     .testimonials-content-heading-picture{
-        margin-left: 150px; 
+        margin-left: 145px; 
     }
 
     .testimonials-content-heading-picture img{
@@ -332,14 +345,17 @@ color: #A7021D;
         margin-left: 290px;
     }
 }
+@media (max-width:520px){
+    
+    .testimonials-content-heading1{
+        margin-left: 260px;  
+    }
+}
 
 @media (max-width:420px){
     
     .testimonials-content-heading1{
-        margin-left: 265px;
-       
-       
-        
+        margin-left: 265px;  
     }
 }
 
@@ -470,9 +486,23 @@ text-decoration-skip-ink: none;
 color: #303030;
 word-spacing: 3px;
 line-height: 40px;
+max-width: 90%;
+overflow: hidden;
+}
+@media (max-width:770px){
+    .testimonials-quote1{
+       height: 155px ;
+        
+        
+    }
+}
 
-
-
+@media (max-width:530px){
+    .testimonials-quote1{
+       margin-left: 10px;
+        
+        
+    }
 }
 
 
